--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,22 @@
         "uniform": "cpp",
         "vertexarraystate": "cpp",
         "buffered_value": "cpp",
-        "fast_back_stack": "cpp"
+        "fast_back_stack": "cpp",
+        "any": "cpp",
+        "barrier": "cpp",
+        "bit": "cpp",
+        "charconv": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "coroutine": "cpp",
+        "optional": "cpp",
+        "source_location": "cpp",
+        "latch": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "syncstream": "cpp",
+        "variant": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
